force-app/main/default/objects/Order/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <label>Accessories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>