force-app/main/default/objects/Order/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Account.LastName &amp;&apos; &apos;&amp; Account.FirstName</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>