force-app/main/default/objects/Order/fields/Address_Full__c.field-meta.xml
<CustomField>
    <fullName>Address_Full__c</fullName>
    <formula>IF(ISBLANK(Address_No__c) , &apos;&apos;, Address_No__c + &apos;, &apos;) + 
IF(ISBLANK(District__r.Name) , &apos;&apos;, District__r.Name + &apos;, &apos;) + 
Province__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Full</label>
    <type>Text</type>
</CustomField>