force-app/main/default/objects/Order/fields/Amount_PO__c.field-meta.xml
<CustomField>
    <fullName>Amount_PO__c</fullName>
    <description>Tổng thành tiền các line trong Order Profoma</description>
    <label>Amount PO</label>
    <summarizedField>OrderItem.Amount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>