force-app/main/default/objects/Order/fields/Appraiser__c.field-meta.xml
<CustomField>
    <fullName>Appraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appraiser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders5</relationshipName>
    <type>Lookup</type>
</CustomField>