force-app/main/default/objects/Order/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <formula>Asset__r.Name</formula>
    <label>Asset Name</label>
    <type>Text</type>
</CustomField>