force-app/main/default/objects/Order/fields/Authorized_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Number__c</fullName>
    <label>Authorized Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>