force-app/main/default/objects/Order/fields/BarCode__c.field-meta.xml
<CustomField>
    <fullName>BarCode__c</fullName>
    <formula>IMAGE(&quot;http://www.barcodesinc.com/generator/image.php?code=&quot; &amp; Barcode_Number__c &amp; &quot;&amp;style=325&amp;type=C128B&amp;width=200&amp;height=50&amp;xres=1&amp;font=3&amp;fmt=pdf&quot;, &quot;Barcode&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BarCode</label>
    <type>Text</type>
</CustomField>