force-app/main/default/objects/Order/fields/Barcode_Number__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Number__c</fullName>
    <formula>Order_Number__c +  DO_DL__r.DO_DL_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Barcode Number</label>
    <type>Text</type>
</CustomField>