force-app/main/default/objects/Order/fields/Bike_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Bike_Delivery_Date__c</fullName>
    <label>Bike Delivery Date</label>
    <type>DateTime</type>
</CustomField>