force-app/main/default/objects/Order/fields/Bike_Description__c.field-meta.xml
<CustomField>
    <fullName>Bike_Description__c</fullName>
    <formula
  >IF(  OR ( Opportunity.SyncedQuote.Promotion_Default__c != null, Opportunity.SyncedQuote.Discount_Standard__c  &gt; 0  &amp;&amp;  Opportunity.SyncedQuote.Discount_Amount__c &gt; 0),
 

&apos;Xe Mô Tô hai bánh nhãn hiệu YAMAHA &apos;
+ &apos;; Số Loại:&apos;+ Asset__r.Product2.Sales_Name__c  
+ &apos;; Mới 100%&apos;
+ &apos;; SK:&apos;+ Asset__r.Frame_Number__c 
+ &apos;; SM:&apos;+ Asset__r.Engine_No__c 
+ &apos;; Màu sơn:&apos; +  Asset__r.Product2.Color_Name__c

+ &apos;; (Giảm giá trực tiếp theo CTKM &apos; +  Opportunity.SyncedQuote.Promotion_Item__r.Promotion__r.Name + &apos; dành cho các dòng xe tại Revzone Yamaha Motor)&apos;

,

&apos;Xe Mô Tô hai bánh nhãn hiệu YAMAHA &apos;
+ &apos;; Số Loại:&apos;+ Asset__r.Product2.Sales_Name__c  
+ &apos;; Mới 100%&apos;
+ &apos;; SK:&apos;+ Asset__r.Frame_Number__c 
+ &apos;; SM:&apos;+ Asset__r.Engine_No__c 
+ &apos;; Màu sơn:&apos; +  Asset__r.Product2.Color_Name__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bike Description</label>
    <type>Text</type>
</CustomField>