force-app/main/default/objects/Order/fields/Bike_Receiving_Date__c.field-meta.xml
<CustomField>
    <fullName>Bike_Receiving_Date__c</fullName>
    <label>Bike Receiving Date</label>
    <type>DateTime</type>
</CustomField>