force-app/main/default/objects/Order/fields/Bike_Type__c.field-meta.xml
<CustomField>
    <fullName>Bike_Type__c</fullName>
    <formula>Asset__r.Bike_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bike Type</label>
    <type>Text</type>
</CustomField>