force-app/main/default/objects/Order/fields/Booking_Note__c.field-meta.xml
<CustomField>
    <fullName>Booking_Note__c</fullName>
    <label>Booking Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>