force-app/main/default/objects/Order/fields/Booking_Onilne__c.field-meta.xml
<CustomField>
    <fullName>Booking_Onilne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Onilne</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Booking_Onilne__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>PCA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Booking_Onilne__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>