force-app/main/default/objects/Order/fields/Bought_From__c.field-meta.xml
<CustomField>
    <fullName>Bought_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bought From</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>DO/DLR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Bought From)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>