force-app/main/default/objects/Order/fields/Brake_Clutch_levers__c.field-meta.xml
<CustomField>
    <fullName>Brake_Clutch_levers__c</fullName>
    <label>Brake/Clutch levers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>