force-app/main/default/objects/Order/fields/Brake_light__c.field-meta.xml
<CustomField>
    <fullName>Brake_light__c</fullName>
    <label>Brake light</label>
    <length>255</length>
    <type>Text</type>
</CustomField>