force-app/main/default/objects/Order/fields/Cancel_Code__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Code__c</fullName>
    <label>Cancel Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>