force-app/main/default/objects/Order/fields/Case_Borrow__c.field-meta.xml
<CustomField>
    <fullName>Case_Borrow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Borrow</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordType.Name</field>
            <operation>equals</operation>
            <value>Borrow Part</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>