force-app/main/default/objects/Order/fields/Cashier__c.field-meta.xml
<CustomField>
    <fullName>Cashier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Consultant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_Type__c</field>
            <operation>equals</operation>
            <value>Cashier</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders Cashier</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>