force-app/main/default/objects/Order/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>PDI</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Free Coupon</fullName>
            </value>
            <value>
                <fullName>Quick Service</fullName>
            </value>
            <value>
                <fullName>Free Service</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>