force-app/main/default/objects/Order/fields/Charging_system__c.field-meta.xml
<CustomField>
    <fullName>Charging_system__c</fullName>
    <label>Charging system</label>
    <length>255</length>
    <type>Text</type>
</CustomField>