force-app/main/default/objects/Order/fields/Clean_up__c.field-meta.xml
<CustomField>
    <fullName>Clean_up__c</fullName>
    <label>Clean up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>