force-app/main/default/objects/Order/fields/Clutch_Throtttle_cable__c.field-meta.xml
<CustomField>
    <fullName>Clutch_Throtttle_cable__c</fullName>
    <label>Clutch/Throtttle cable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>