force-app/main/default/objects/Order/fields/Clutch_Transmission__c.field-meta.xml
<CustomField>
    <fullName>Clutch_Transmission__c</fullName>
    <label>Clutch/Transmission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>