force-app/main/default/objects/Order/fields/Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Color_Code__c</fullName>
    <formula>Product__r.Color_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Code</label>
    <type>Text</type>
</CustomField>