force-app/main/default/objects/Order/fields/Compression__c.field-meta.xml
<CustomField>
    <fullName>Compression__c</fullName>
    <label>Compression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>