force-app/main/default/objects/Order/fields/Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Contract_No__c</fullName>
    <label>Contract No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>