force-app/main/default/objects/Order/fields/Cooling_system__c.field-meta.xml
<CustomField>
    <fullName>Cooling_system__c</fullName>
    <label>Cooling system</label>
    <length>255</length>
    <type>Text</type>
</CustomField>