force-app/main/default/objects/Order/fields/Count_Detail_Job__c.field-meta.xml
<CustomField>
    <fullName>Count_Detail_Job__c</fullName>
    <label>Count Detail Job</label>
    <summarizedField>OrderItem.Count_Detail_Job__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>