force-app/main/default/objects/Order/fields/count_order_product__c.field-meta.xml
<CustomField>
    <fullName>count_order_product__c</fullName>
    <label>Count Order Product</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>