force-app/main/default/objects/Order/fields/Count_Repair_Job__c.field-meta.xml
<CustomField>
    <fullName>Count_Repair_Job__c</fullName>
    <label>Count Repair Job</label>
    <summarizedField>OrderItem.Count_Repair_Job__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>