force-app/main/default/objects/Order/fields/Crankcase_No__c.field-meta.xml
<CustomField>
    <fullName>Crankcase_No__c</fullName>
    <label>Crankcase No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>