force-app/main/default/objects/Order/fields/Crankcase_Number__c.field-meta.xml
<CustomField>
    <fullName>Crankcase_Number__c</fullName>
    <label>Crankcase No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>