force-app/main/default/objects/Order/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>Created_Date</label>
    <type>DateTime</type>
</CustomField>