force-app/main/default/objects/Order/fields/Created_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Created_Voucher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Voucher</label>
    <type>Checkbox</type>
</CustomField>