force-app/main/default/objects/Order/fields/CSI__c.field-meta.xml
<CustomField>
    <fullName>CSI__c</fullName>
    <label>CSI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>