force-app/main/default/objects/Order/fields/CSI_Positive__c.field-meta.xml
<CustomField>
    <fullName>CSI_Positive__c</fullName>
    <label>CSI Positive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>