force-app/main/default/objects/Order/fields/Current_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Current_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>