force-app/main/default/objects/Order/fields/Date_Send_SMS__c.field-meta.xml
<CustomField>
    <fullName>Date_Send_SMS__c</fullName>
    <label>Date Send SMS</label>
    <type>Date</type>
</CustomField>