force-app/main/default/objects/Order/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DO HCM</fullName>
            </value>
            <value>
                <fullName>DLR 1</fullName>
            </value>
            <value>
                <fullName>DLR 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>