force-app/main/default/objects/Order/fields/Delivery_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Text__c</fullName>
    <label>Delivery Date (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>