force-app/main/default/objects/Order/fields/Delivery_Fee__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Fee__c</fullName>
    <label>Delivery Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>