force-app/main/default/objects/Order/fields/Detailing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Detailing_End_Date__c</fullName>
    <label>Detailing End Date</label>
    <type>DateTime</type>
</CustomField>