force-app/main/default/objects/Order/fields/Detailing_Hours__c.field-meta.xml
<CustomField>
    <fullName>Detailing_Hours__c</fullName>
    <label>Detailing Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>