force-app/main/default/objects/Order/fields/Detailing_Staff__c.field-meta.xml
<CustomField>
    <fullName>Detailing_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detailing Staff</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_Type__c</field>
            <operation>equals</operation>
            <value>Detailing Staff</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Detailing Staff)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>