force-app/main/default/objects/Order/fields/Detailing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Detailing_Start_Date__c</fullName>
    <label>Detailing Start Date</label>
    <type>DateTime</type>
</CustomField>