force-app/main/default/objects/Order/fields/Displacement__c.field-meta.xml
<CustomField>
    <fullName>Displacement__c</fullName>
    <formula>Text(Product__r.Engince_cc__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Displacement</label>
    <type>Text</type>
</CustomField>