force-app/main/default/objects/Order/fields/DO_DL_2__c.field-meta.xml
<CustomField>
    <fullName>DO_DL_2__c</fullName>
    <formula>DO_DL__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DO/DL</label>
    <type>Text</type>
</CustomField>