force-app/main/default/objects/Order/fields/DO_DL__c.field-meta.xml
<CustomField>
    <fullName>DO_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Need to fill the DO/DL to get warehouse inventory for that warehouse.</inlineHelpText>
    <label>DO/DL</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders DO/DL</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>