force-app/main/default/objects/Order/fields/DO_DL_Owner__c.field-meta.xml
<CustomField>
    <fullName>DO_DL_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DO DL Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>