force-app/main/default/objects/Order/fields/DO_NAME__c.field-meta.xml
<CustomField>
    <fullName>DO_NAME__c</fullName>
    <formula>Order_Ecommerce__r.dealer_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DO NAME</label>
    <type>Text</type>
</CustomField>