force-app/main/default/objects/Order/fields/Emailed_Survey__c.field-meta.xml
<CustomField>
    <fullName>Emailed_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emailed Survey</label>
    <type>Checkbox</type>
</CustomField>