force-app/main/default/objects/Order/fields/Engine_No__c.field-meta.xml
<CustomField>
    <fullName>Engine_No__c</fullName>
    <formula>Asset__r.Engine_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engine No</label>
    <type>Text</type>
</CustomField>