force-app/main/default/objects/Order/fields/Event_Note__c.field-meta.xml
<CustomField>
    <fullName>Event_Note__c</fullName>
    <label>Event Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>