force-app/main/default/objects/Order/fields/External_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>External_Service_Order__c</fullName>
    <label>External Service Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Quick services</fullName>
            </value>
            <value>
                <fullName>Free Services</fullName>
            </value>
            <value>
                <fullName>Detailling</fullName>
            </value>
            <value>
                <fullName>Dyno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>