force-app/main/default/objects/Order/fields/Fairings__c.field-meta.xml
<CustomField>
    <fullName>Fairings__c</fullName>
    <label>Fairings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>