force-app/main/default/objects/Order/fields/Final_Drive__c.field-meta.xml
<CustomField>
    <fullName>Final_Drive__c</fullName>
    <label>Final Drive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>