force-app/main/default/objects/Order/fields/Flate_No__c.field-meta.xml
<CustomField>
    <fullName>Flate_No__c</fullName>
    <formula>Asset__r.Plate_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flate No</label>
    <type>Text</type>
</CustomField>