force-app/main/default/objects/Order/fields/FormNumber__c.field-meta.xml
<CustomField>
    <fullName>FormNumber__c</fullName>
    <label>FormNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>