force-app/main/default/objects/Order/fields/Frame__c.field-meta.xml
<CustomField>
    <fullName>Frame__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frame</label>
    <type>Checkbox</type>
</CustomField>