force-app/main/default/objects/Order/fields/Frame_No1__c.field-meta.xml
<CustomField>
    <fullName>Frame_No1__c</fullName>
    <formula>Asset__r.Frame_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frame No</label>
    <type>Text</type>
</CustomField>