force-app/main/default/objects/Order/fields/Frame_No__c.field-meta.xml
<CustomField>
    <fullName>Frame_No__c</fullName>
    <label>Frame No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>