force-app/main/default/objects/Order/fields/Free_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Free_Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Free Coupon</label>
    <referenceTo>Free_Coupon__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>