force-app/main/default/objects/Order/fields/Front_brake_s__c.field-meta.xml
<CustomField>
    <fullName>Front_brake_s__c</fullName>
    <label>Front brake(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>