force-app/main/default/objects/Order/fields/Front_forks__c.field-meta.xml
<CustomField>
    <fullName>Front_forks__c</fullName>
    <label>Front forks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>