force-app/main/default/objects/Order/fields/Fuel_tank__c.field-meta.xml
<CustomField>
    <fullName>Fuel_tank__c</fullName>
    <label>Fuel tank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>