force-app/main/default/objects/Order/fields/General_Condition__c.field-meta.xml
<CustomField>
    <fullName>General_Condition__c</fullName>
    <label>General Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>