force-app/main/default/objects/Order/fields/GoodWill__c.field-meta.xml
<CustomField>
    <fullName>GoodWill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use only for External Service</description>
    <label>GoodWill</label>
    <type>Checkbox</type>
</CustomField>