force-app/main/default/objects/Order/fields/Handlebar_s__c.field-meta.xml
<CustomField>
    <fullName>Handlebar_s__c</fullName>
    <label>Handlebar(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>