force-app/main/default/objects/Order/fields/Handling__c.field-meta.xml
<CustomField>
    <fullName>Handling__c</fullName>
    <label>Handling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>