force-app/main/default/objects/Order/fields/Headlight_s__c.field-meta.xml
<CustomField>
    <fullName>Headlight_s__c</fullName>
    <label>Headlight(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>