force-app/main/default/objects/Order/fields/ID_No__c.field-meta.xml
<CustomField>
    <fullName>ID_No__c</fullName>
    <formula>Account.ID_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID No</label>
    <type>Text</type>
</CustomField>