force-app/main/default/objects/Order/fields/ID_Web_Primary_Order__c.field-meta.xml
<CustomField>
    <fullName>ID_Web_Primary_Order__c</fullName>
    <formula>Order_Ecommerce__r.ID_Primary_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Web Primary Order</label>
    <type>Text</type>
</CustomField>