force-app/main/default/objects/Order/fields/IMEI_Free_Coupon__c.field-meta.xml
<CustomField>
    <fullName>IMEI_Free_Coupon__c</fullName>
    <label>IMEI Free Coupon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>