force-app/main/default/objects/Order/fields/Indicators__c.field-meta.xml
<CustomField>
    <fullName>Indicators__c</fullName>
    <label>Indicators</label>
    <length>255</length>
    <type>Text</type>
</CustomField>